# BlackDogApi

./: README.md  pyproject.toml  requirements.txt
blackdogapi/: README.md  app.py  banco.db  requirements.txt
tests/: test_blackdogapi.py
