[tool.poetry]
name = "BlackDogApi"
version = "0.1.0"
description = ""
authors = ["darkcode357 <darkcode357@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aniso8601 = "6.0.0"
click = "7.0"
Flask = "1.0.2"
Flask-JWT-Extended = "3.18.1"
Flask-RESTful = "0.3.9"
Flask-SQLAlchemy = "2.3.2"
itsdangerous = "1.1.0"
Jinja2 = "2.10.1"
MarkupSafe = "1.1.1"
PyJWT = "1.7.1"
pytz = "2019.1"
six = "1.12.0"
SQLAlchemy = "1.3.3"
Werkzeug = "2.0.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
